# advent-of-code-2023

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  lib.rs  main.rs
src/day1/: args.rs  first_and_last_digit.rs  mod.rs
src/day2/: draw.rs  game.rs  mod.rs
src/day3/: mod.rs  schematic_parser.rs
src/day4/: mod.rs  scratchcard.rs
